<resources>
    <string name="app_name">Stately</string>
    <string name="app_version">Stately for NationStates (v%1$s)</string>
    <string name="stately_alphys_r">Stately Notification Polling Receiver</string>
    <string name="stately_alphys">Stately Notification Polling Service</string>
    <string name="stately_notifs_sub_template">%1$s — Stately for NationStates</string>
    <string name="login_subtitle_conservative">Make NationStates Great Again</string>
    <string name="login_subtitle_liberal">Unite for a Better NationStates</string>
    <string name="login_subtitle_neutral">for NationStates</string>
    <string name="login_subtitle_new_year">Happy %1$d!</string>
    <string name="login_subtitle_jennifer_government">Read Jennifer Government!</string>
    <string name="login_subtitle_stately_bday">Special Anniversary Edition</string>
    <string name="login_subtitle_max_barry">Happy Birthday Max Barry!</string>
    <string name="login_subtitle_april_fools">big yikes edition</string>
    <string name="login_subtitle_canada_day">Made in Canada / Fabriqué au Canada</string>
    <string name="login_subtitle_zday">Z-Day Land Saga Edition</string>
    <string name="login_subtitle_halloween">Trick or Treat~</string>
    <string name="login_subtitle_ns_bday">NationStates Turns %1$d!</string>
    <string name="username_hint">Nation Name</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="create_nation">Create New Nation</string>
    <string name="create_nation_redirect">To create a new nation, you\'ll be redirected to the NationStates website.\nThis website uses Google Analytics.</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="create_continue">Continue</string>
    <string name="create_finish">Type in your nation name and password to get started.</string>
    <string name="create_error">Something went wrong with the new nation process. Try again on the NationStates website (nationstates.net).</string>
    <string name="log_in_load">Logging In…</string>
    <string name="calibration_load">Calibrating…</string>
    <string name="guidance_invalid_login_title">Problem logging in?</string>
    <string name="guidance_invalid_login_content">Try logging in on the NationStates website (nationstates.net) and updating your password.</string>
    <string name="login_error_404">Invalid nation name or password.</string>
    <string name="login_error_parsing">Couldn\'t process data from NationStates.</string>
    <string name="login_error_no_internet">Couldn\'t connect to NationStates.</string>
    <string name="login_error_generic">An error occurred. Try again in a bit.</string>
    <string name="rate_limit_error">Too fast! Try again in a bit.</string>
    <string name="multiple_request_error">An action is already in progress.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_nation">Nation</string>
    <string name="menu_issues">Issues</string>
    <string name="menu_telegrams">Telegrams</string>
    <string name="menu_region">Region</string>
    <string name="menu_wa">World Assembly</string>
    <string name="menu_world">The World</string>
    <string name="menu_activityfeed">Activity Feed</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_switch">Switch</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_unread_count_over100">100+</string>
    <string name="time_moments_template">%1$s %2$s</string>
    <string name="time_generic_template">%1$d %2$s %3$s</string>
    <string name="time_moments">moments</string>
    <string name="time_ago">ago</string>
    <string name="time_from_now">from now</string>
    <string name="explore_search_text">Go to&#8230;</string>
    <string name="explore_nation">Nation</string>
    <string name="explore_region">Region</string>
    <string name="explore_positive">Let\'s Go</string>
    <string name="explore_negative">Cancel</string>
    <string name="explore_default">Exploring&#8230;</string>
    <string name="explore_error_404_nation">Nation not found.</string>
    <string name="explore_endorse">Endorse</string>
    <string name="explore_withdraw_endorse">Withdraw Endorsement</string>
    <string name="explore_endorse_confirm">Endorse %1$s?</string>
    <string name="explore_withdraw_endorse_confirm">Withdraw endorsement for %1$s?</string>
    <string name="explore_endorsed_response">Endorsed %1$s.</string>
    <string name="explore_withdraw_endorse_response">Withdrew endorsement for %1$s.</string>
    <string name="explore_endorse_button">Endorse</string>
    <string name="explore_withdraw_endorse_button">Withdraw</string>
    <string name="explore_endorse_progress">Endorsing %1$s…</string>
    <string name="explore_withdraw_endorse_progress">Withdrawing endorsement for %1$s…</string>
    <string name="explore_menu_dossier_add">Add to Dossier</string>
    <string name="explore_menu_dossier_rem">Remove from Dossier</string>
    <string name="explore_dossier_added">Added %1$s to the Dossier.</string>
    <string name="explore_dossier_removed">Removed %1$s from the Dossier.</string>
    <string name="explore_dossier_add_confirm">Add %1$s to the Dossier?</string>
    <string name="explore_dossier_rem_confirm">Remove %1$s from the Dossier?</string>
    <string name="explore_dossier_add_button">Add</string>
    <string name="explore_dossier_rem_button">Remove</string>
    <string name="explore_dossier_add_progress">Adding %1$s to the Dossier…</string>
    <string name="explore_dossier_rem_progress">Removing %1$s from the Dossier…</string>
    <string name="explore_region_move">Move to %1$s?</string>
    <string name="explore_region_password">Password for %1$s</string>
    <string name="explore_move_confirm">Move</string>
    <string name="explore_move_progress">Moving to %1$s…</string>
    <string name="explore_move_wrong_password">Incorrect password.</string>
    <string name="explore_move_blocked">Too many invalid attempts! Try again in a bit.</string>
    <string name="switch_single_warn">No other nations are saved in Stately. Would you like to log in to a different nation?</string>
    <string name="add_nation">Add Nation</string>
    <string name="logout_confirm">Log out?</string>
    <string name="setting_exitconfirm">Confirm exit</string>
    <string name="exit_confirm">Exit Stately?</string>
    <string name="exit">Exit</string>
    <string name="nation_issues_answered">%1$s %2$s answered</string>
    <string name="nation_time_founded">Established %1$s\nLast seen %2$s</string>
    <string name="nation_time_immemorial">since time immemorial</string>
    <string name="overview_label_civrights">Civil Rights</string>
    <string name="overview_label_economy">Economy</string>
    <string name="overview_label_polifree">Political Freedom</string>
    <string name="card_overview_gov_title">Government</string>
    <string name="card_overview_gov_leader">Leader</string>
    <string name="card_overview_gov_capital">Capital</string>
    <string name="card_overview_gov_priority">Priority</string>
    <string name="card_overview_gov_tax">Income Tax</string>
    <string name="card_overview_econ_title">Economy</string>
    <string name="card_overview_econ_currency">Currency</string>
    <string name="card_overview_econ_gdp">Gross Domestic Product (GDP)</string>
    <string name="card_overview_econ_industry">Major Industry</string>
    <string name="card_overview_econ_income">Average Income</string>
    <string name="card_overview_wa_endorsements">Endorsements</string>
    <string name="card_overview_wa_novote">%1$s: No vote on the resolution.</string>
    <string name="card_overview_wa_vote">%1$s: Voted %2$s the resolution.</string>
    <string name="card_overview_other_title">Other Information</string>
    <string name="card_overview_other_demonym">Demonym</string>
    <string name="card_overview_other_demonym_txt1">%1$s (noun, plural %2$s), %3$s (adjective)</string>
    <string name="card_overview_other_demonym_txt2">%1$s (noun/adjective, plural %2$s)</string>
    <string name="card_overview_other_religion">Religion</string>
    <string name="card_overview_other_animal">National Animal</string>
    <string name="card_overview_other_census_title">Today\'s Census: %1$s</string>
    <string name="card_overview_other_census_region">#%1$s in %2$s (top %3$s%%)</string>
    <string name="card_overview_other_census_world">#%1$s in the world (top %2$s%%)</string>
    <string name="card_overview_census_button">Trends for %1$s</string>
    <string name="card_main_title_summary">Summary</string>
    <string name="card_policy_enacted">Policy Enacted</string>
    <string name="card_policy_abolished">Policy Abolished</string>
    <string name="card_people_summarydesc_flavour">The %1$s of %2$s is notable for its %3$s, as well as its %4$s population of %5$s %6$s.</string>
    <string name="card_people_mortality_title">Mortality</string>
    <string name="animal_attack_madlibs">%1$s Attack</string>
    <string name="card_government_expenditures_title">Expenditures</string>
    <string name="card_government_expenditures_budget">Total</string>
    <string name="card_government_expenditures_budget_flavour">%1$s (%2$.1f%% of GDP)</string>
    <string name="administration">Administration</string>
    <string name="defense">Defense</string>
    <string name="education">Education</string>
    <string name="environment">Environment</string>
    <string name="healthcare">Healthcare</string>
    <string name="industry">Industry</string>
    <string name="international_aid">International Aid</string>
    <string name="law_and_order">Law and Order</string>
    <string name="public_transport">Public Transport</string>
    <string name="subscriptions_curnation">Current nation</string>
    <string name="subscriptions_switch">Switch nation list</string>
    <string name="subscriptions_dossier_n">Dossier: Nations</string>
    <string name="subscriptions_region">Current region</string>
    <string name="subscriptions_dossier_r">Dossier: Regions</string>
    <string name="subscriptions_wa">World Assembly</string>
    <string name="card_region_wa_vote">%1$s: Regional Votes</string>
    <string name="card_region_wa_link">Go to the %1$s resolution</string>
    <string name="votes_null">No votes have been recorded yet!</string>
    <string name="census_sort_score">Score</string>
    <string name="census_sort_world_rank">World rank</string>
    <string name="census_sort_world_percent">World percentile</string>
    <string name="census_sort_region_rank">Region rank</string>
    <string name="census_sort_region_percent">Region percentile</string>
    <string name="census_sort_ascending">Ascending</string>
    <string name="census_sort_descending">Descending</string>
    <string name="telegrams_archive">Archive</string>
    <string name="telegrams_move">Move</string>
    <string name="telegrams_delete">Delete</string>
    <string name="telegrams_report">Report</string>
    <string name="telegrams_send">Send Telegram</string>
    <string name="wa_vote_dialog_for">For</string>
    <string name="wa_vote_dialog_against">Against</string>
    <string name="wa_vote_dialog_undecided">No vote</string>
    <string name="superweapon_tzes">Deploy TZESs</string>
    <string name="superweapon_cure">Launch cure missile</string>
    <string name="superweapon_horde">Unleash zombie horde</string>
    <string name="setting_title_behavior">General</string>
    <string name="setting_autologin">Log in automatically</string>
    <string name="setting_issueconfirm">Confirm issue decisions</string>
    <string name="setting_title_about">About</string>
    <string name="setting_developer_info">Built with ♥ in Canada by Lloyd Torres\nContributors: Jannes Höke, Samtinel</string>
</resources>