<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nation"
            android:icon="@drawable/ic_menu_nation"
            android:title="@string/menu_nation" />
        <item
            android:id="@+id/nav_issues"
            android:icon="@drawable/ic_menu_issues"
            android:title="@string/menu_issues"
            app:actionLayout="@layout/view_drawercounter"/>
        <item
            android:id="@+id/nav_telegrams"
            android:icon="@drawable/ic_menu_telegrams"
            android:title="@string/menu_telegrams"
            app:actionLayout="@layout/view_drawercounter"/>
        <item
            android:id="@+id/nav_region"
            android:icon="@drawable/ic_menu_region"
            android:title="@string/menu_region"
            app:actionLayout="@layout/view_drawercounter"/>
        <item
            android:id="@+id/nav_wa"
            android:icon="@drawable/ic_menu_wa"
            android:title="@string/menu_wa"
            app:actionLayout="@layout/view_drawercounter"/>
        <item
            android:id="@+id/nav_world"
            android:icon="@drawable/ic_menu_world"
            android:title="@string/menu_world"
            />
        <item
            android:id="@+id/nav_activityfeed"
            android:icon="@drawable/ic_activityfeed"
            android:title="@string/menu_activityfeed" />

    </group>

    <group android:id="@+id/grp2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_menu_explore"
            android:title="@string/menu_explore" />
        <item
            android:id="@+id/nav_switch"
            android:icon="@drawable/ic_menu_switch"
            android:title="@string/menu_switch" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>
