<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/telegrams_archive"
        android:icon="@drawable/ic_menu_telegrams"
        android:title="@string/telegrams_archive"
        app:showAsAction="never" />
    <item
        android:id="@+id/telegrams_move"
        android:icon="@drawable/ic_menu_telegrams"
        android:title="@string/telegrams_move"
        app:showAsAction="never" />
    <item
        android:id="@+id/telegrams_delete"
        android:icon="@drawable/ic_menu_telegrams"
        android:title="@string/telegrams_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/telegrams_report"
        android:icon="@drawable/ic_menu_telegrams"
        android:title="@string/telegrams_report"
        app:showAsAction="never" />
</menu>