<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatCheckBox android:id="@+id/subscriptions_curnation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:textSize="15sp"
            android:text="@string/subscriptions_curnation"
            app:buttonTint="?attr/themedColorTab"/>
        <androidx.appcompat.widget.AppCompatCheckBox android:id="@+id/subscriptions_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:textSize="15sp"
            android:text="@string/subscriptions_switch"
            app:buttonTint="?attr/themedColorTab"/>
        <androidx.appcompat.widget.AppCompatCheckBox android:id="@+id/subscriptions_dossier_n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:textSize="15sp"
            android:text="@string/subscriptions_dossier_n"
            app:buttonTint="?attr/themedColorTab"/>
        <androidx.appcompat.widget.AppCompatCheckBox android:id="@+id/subscriptions_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:textSize="15sp"
            android:text="@string/subscriptions_region"
            app:buttonTint="?attr/themedColorTab"/>
        <androidx.appcompat.widget.AppCompatCheckBox android:id="@+id/subscriptions_dossier_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:textSize="15sp"
            android:text="@string/subscriptions_dossier_r"
            app:buttonTint="?attr/themedColorTab"/>
        <androidx.appcompat.widget.AppCompatCheckBox android:id="@+id/subscriptions_wa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:textSize="15sp"
            android:text="@string/subscriptions_wa"
            app:buttonTint="?attr/themedColorTab"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>