<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="?attr/colorPrimary"
    android:gravity="center">

    <ImageView
        android:id="@+id/login_header"
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        tools:src="@drawable/stately"/>
    <TextView
        android:id="@+id/login_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:text="@string/login_subtitle_neutral" />

    <View
        android:layout_width="match_parent"
        android:layout_height="24dp"/>

    <EditText
        android:id="@+id/field_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="textCapWords|textNoSuggestions"
        android:hint="@string/username_hint"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/white"
        android:theme="@style/TextLoginField"
        android:nextFocusForward="@+id/field_password"/>

    <EditText
        android:id="@+id/field_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="textWebPassword"
        android:hint="@string/password"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif"
        android:theme="@style/TextLoginField"
        android:nextFocusForward="@+id/login_button"/>

    <Button
        android:id="@+id/login_button"
        android:layout_marginTop="16dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:text="@string/log_in"
        android:layout_gravity="center_horizontal"
        android:textSize="17sp"
        android:onClick="verifyUsername"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:text="@string/create_nation"
        android:layout_gravity="center_horizontal"
        android:textSize="17sp"
        android:onClick="startCreateNation"/>

</LinearLayout>