<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup
        android:id="@+id/superweapon_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <androidx.appcompat.widget.AppCompatRadioButton android:id="@+id/superweapon_tzes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/superweapon_tzes"
            android:textSize="15sp"
            app:buttonTint="?attr/themedColorTab"
            android:visibility="gone"
            tools:visibility="visible"/>
        <androidx.appcompat.widget.AppCompatRadioButton android:id="@+id/superweapon_cure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/superweapon_cure"
            android:textSize="15sp"
            app:buttonTint="?attr/themedColorTab"
            android:visibility="gone"
            tools:visibility="visible"/>
        <androidx.appcompat.widget.AppCompatRadioButton android:id="@+id/superweapon_horde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/superweapon_horde"
            android:textSize="15sp"
            app:buttonTint="?attr/themedColorTab"
            android:visibility="gone"
            tools:visibility="visible"/>
    </RadioGroup>
</androidx.core.widget.NestedScrollView>