<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardBackgroundColor="@android:color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:id="@+id/region_wa_title"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/card_region_wa_vote" />
        <TextView
            android:id="@+id/region_wa_vote_filler"
            android:paddingTop="8dp"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/region_wa_filler" />
        <TextView
            android:id="@+id/region_wa_null_vote"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/votes_null"/>
        <com.github.mikephil.charting.charts.PieChart
            android:layout_marginTop="20dp"
            android:id="@+id/region_wa_breakdown"
            android:layout_width="match_parent"
            android:layout_height="300dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/region_wa_link"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/region_wa_link_text"
                android:textSize="15sp"
                android:fontFamily="sans-serif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/card_region_wa_link"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:visibility="invisible"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-light" />
        </RelativeLayout>
    </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>